Added the cryptography package dependency.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 description = "A project demonstrating practical AES encrption and SHA hashing in Python."
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = []
+dependencies = [
+    "cryptography>=46.0.3",
+]
